# pico-projects

pico-transistors/: CMakeLists.txt  blink_led.c
pico-transistors/codes/: analog  get char code  test shifterów
